2013-07-05         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* configure.ac (AC_CHECK_FUNCS): Add kill and sigprocmask.
	* select.c (get_signal_number): Change error messages since now may
	be called by "kill" as well as "select_signal".
	(do_signal): Add a lint warning if there are more than 2 args.
	(do_kill): Add new function to send a signal.
	(do_select): Support platforms where sigprocmask is not available.
	There will be a race condition on such platforms, but that is not
	easily avoided.

2013-07-02         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* select.c (do_select): Now that the API flatten_array call has been
	patched to ensure that the index values are strings, we can remove
	the code to check for the AWK_NUMBER case.

2013-07-02         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* select.c (do_select): Do not treat a numeric command value as a
	file descriptor unless the command type is empty.

2013-07-02         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* Makefile.am (EXTRA_DIST): Add errlist.h and siglist.h.

2013-07-02         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* select.c (set_non_blocking): New helper function to call fcntl.
	(do_set_non_blocking): Add support for the case where there's a single
	integer fd argument.

2013-07-01         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* select.c (do_set_non_blocking): Implement new set_non_blocking
	function.
	(func_table): Add set_non_blocking.

2013-07-01         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* errlist.h: New file containing a list of all the errno values I could
	find.
	* errno.c: Implement a new errno extension providing strerror,
	errno2name, and name2errno.
	* Makefile.am (pkgextension_LTLIBRARIES): Add errno.la.
	(errno_la_SOURCES, errno_la_LDFLAGS, errno_la_LIBADD): Build new errno
	extension.
	* select.c (ext_version): Fix version string.